# midas

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci-build.yml  python.yml
example/: .env.template.toml  backtest.py  trade.py
example/data/: delivery_prices.csv  options.csv
example/strategy/: __init__.py  short_put.py
midas/base/: __init__.py  broker.py  feed.py  order.py  strategy.py  ticker.py  timer.py
midas/helpers/: datetime.py
midas/live/: deribit_feed.py  live_timer.py
midas/paper/: __init__.py  chronos.py  csv_broker.py  csv_feed.py  paper_broker.py  simulated_timer.py
midas/types/: order.py  transaction.py
tests/data/: delivery_prices.csv  options.csv  tickers.csv
tests/helpers/: test_datetime.py
tests/paper/: test_csv_broker.py  test_csv_feed.py  test_paper_broker.py
