[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "midas"
version = "0.1.0"
description = "A cryptocurrency options trading framework"
authors = ["Phú <phu.hn.vo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7"
aiohttp-rpc = "^0.7"
cchardet = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.15"
pandas = "^1.2"
toml = "^0.10"

[tool.poetry.scripts]
trade = "example.trade:main"
